Refactor to use constructor injection and final fields
Replaces field injection and @Autowired annotations with constructor injection and final fields across use cases, DTOs, and service classes. Updates DTOs to use final fields for immutability. Cleans up imports and improves logging in Controller, replacing System.out/err with SLF4J logger. Updates Spring Boot version in pom.xml to 3.5.3.