@@ -5,7 +5,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -22,7 +21,6 @@ public class ServicoDeEstoque {
     private final IEstoqueRepositorio estoqueRepo;
     private final IProdutoRepositorio produtosRepo;
 
-    @Autowired
     public ServicoDeEstoque(IProdutoRepositorio produtos, IEstoqueRepositorio estoque) {
         this.produtosRepo = produtos;
         this.estoqueRepo = estoque;
@@ -121,7 +119,7 @@ public class ServicoDeEstoque {
         relatorio.append("       RELATÓRIO DE PRODUTOS COM BAIXO ESTOQUE\n");
         relatorio.append("   Data de Geração: ").append(java.time.LocalDateTime.now().format(formatter)).append("\n");
         relatorio.append("==================================================================\n");
-        relatorio.append(String.format("%-12s | %-30s | %-15s | %-15s\n", "ID Produto", "Descrição", "Estoque Atual",
+        relatorio.append("%-12s | %-30s | %-15s | %-15s\n".formatted("ID Produto", "Descrição", "Estoque Atual",
                 "Estoque Mínimo"));
         relatorio.append("------------------------------------------------------------------\n");
 
@@ -129,7 +127,7 @@ public class ServicoDeEstoque {
             relatorio.append("Nenhum produto com baixo estoque encontrado.\n");
         } else {
             for (ProdutoEstoqueDTO dto : produtosComBaixoEstoque) {
-                relatorio.append(String.format("%-12d | %-30.30s | %-15d | %-15d\n",
+                relatorio.append("%-12d | %-30.30s | %-15d | %-15d\n".formatted(
                         dto.getId(),
                         dto.getDescricao(),
                         dto.getQuantidadeEmEstoque(),
